Revert "fix: change toggle dark mode logic"
This reverts commit e0dc2496b371505aa1f0302140dccbdaa1c7cb4f.

--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -14,12 +14,6 @@ body {
   overflow-y: scroll;
   overflow-x: hidden;
 
-  transition: background-color 250ms linear;
-
-  &.darkMode {
-    background-color: #000;
-  }
-
   @media screen and (min-width: 768px) {
     font-size: 16px;
     line-height: 1.37;
@@ -35,32 +29,6 @@ body {
       padding-right: 10px;
     }
   }
-
-  background-image: radial-gradient(
-      circle,
-      rgba(188, 230, 210, 0.4) -10%,
-      rgba(255, 255, 255, 0) 70%
-    ),
-    radial-gradient(
-      circle,
-      rgba(64, 112, 205, 0.5) 0%,
-      rgba(255, 255, 255, 0) 50%
-    ),
-    radial-gradient(
-      circle,
-      rgba(188, 230, 210, 0.4) -10%,
-      rgba(255, 255, 255, 0) 70%
-    ),
-    radial-gradient(
-      circle,
-      rgba(64, 112, 205, 0.5) 0%,
-      rgba(255, 255, 255, 0) 50%
-    );
-  background-position-x: -70px, -800px, calc(100dvw - 600px),
-    calc(100dvw - 400px);
-  background-position-y: top, -150px, 400px, 400px;
-  background-size: 357px 357px, 1240px 820px, 800px 800px, 1240px 820px;
-  background-repeat: no-repeat, repeat-y, no-repeat, no-repeat, no-repeat;
 }
 
 code {
